[versioneer]
VCS=git
style=pep440-post
versionfile_source=hyper_tuner/_version.py
versionfile_build=hyper_tuner/_version.py
tag_prefix=v
parentdir_prefix=hyper_tuner-

[metadata]
license_file=LICENSE

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9